--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2582,8 +2582,14 @@ display: none;
     }
     
     #dados_cartao_campos > div:nth-child(12) {
-        margin-top: 150px !important;
-        width: 90px !important;
+        margin-top: -217px;
+        display: block;
+        border: 1px dotted #ccc;
+        float: right;
+        padding: 3px;
+        margin-right: 44px;
+        overflow: hidden;
+        width: 200px;
     }
     
     #lightwindow_contents img {
