--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2277,6 +2277,8 @@ display: none;
     
     #mensagem_contato {
         max-width: 80% !important;
+        width: 80% !important;
+        height: 40px;
     }
     .formulario-contato {
         display: block;
