--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2279,6 +2279,7 @@ display: none;
         max-width: 80% !important;
         width: 80% !important;
         height: 100px !important;
+        min-height: 100px !important;
     }
     .formulario-contato {
         display: block;
