--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2019,6 +2019,7 @@ display: none;
     
     #lightwindow .page-simula-frete {
         max-width: 100%;
+        min-width: 100%;
         
     }
 
