--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2029,7 +2029,7 @@ display: none;
     }
     
     #linkPagParcelado {
-        display: none;
+        display: none !important;
     }
     
     .page-simula-frete  table.tablePage td:nth-child(4) {
