--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2037,6 +2037,13 @@ display: none;
         display: block !important;
     }
     
+    #coments .image.pointer{
+        background: url("https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/bt-enviar-coment.png") repeat scroll 0% 0% transparent !important;
+        padding: 20px 40px !important;
+        display: block;
+        width: 0;
+    }
+    
     #linkPagParcelado {
         display: none !important;
     }
