--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -128,6 +128,7 @@
         min-height: 100%;
         border: 0 !important;
         padding-top: 0;
+        z-index: 999;
     }
 
     #NavInferior {
@@ -2042,6 +2043,10 @@ display: none;
         padding: 20px 42px !important;
         display: block;
         width: 0;
+    }
+    
+    .left-banner {
+        display: none;
     }
     
     #linkPagParcelado {
