--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1686,7 +1686,7 @@ display: none;
     }
     
     .font-default {
-        margin-top: 65px;
+        margin-top: 65px !important;
     }
     
     #form_comprar #quantidade label {
