--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -22,7 +22,7 @@
 
     body {
         width: 100% !important;
-        margin: 0 0 63px 0 !important;
+        margin:  0 !important;
         overflow-x: hidden;
         font-weight: normal;
         
