--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1686,7 +1686,7 @@ display: none;
     }
     
     .font-default {
-margin-top: 30px !important;
+margin-top: 0 !important;
 }
     #form_comprar #quantidade label {
         display: inline-block;
