--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2791,7 +2791,7 @@ margin-top: 0 !important;
         display: none;
     }
 
-    .vitrineVisitados .bts2 {
+    .vitrineVisitados .bts2, .bts {
         padding: 5px 10px;
         border-radius: 5px;
         display: block;
