--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2791,7 +2791,7 @@ margin-top: 0 !important;
         display: none;
     }
 
-    .vitrineVisitados .bts2, {
+    .vitrineVisitados .bts2 {
         padding: 5px 10px !important;
         border-radius: 5px;
         display: block;
@@ -2799,7 +2799,7 @@ margin-top: 0 !important;
         height: auto;
     }
 .BoxVisitados ul li .bts {
-        padding: 5px !important;
+        padding: 2px 5px !important;
         border-radius: 5px;
         display: block;
         width: auto;
