--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1906,6 +1906,11 @@
         font-size: 12px;
         color: #7b7b7b;
     }
+    
+    #descricao img, #descricao table {
+        height: auto;
+        width: 100% !important;
+    }
 
     #descricao embed, #descricao object {
         max-width: 100%;
