--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1906,13 +1906,8 @@
         font-size: 12px;
         color: #7b7b7b;
     }
-    
-    #descricao img, #descricao table {
-        height: auto;
-        width: 100% !important;
-    }
 
-    #descricao embed, #descricao object {
+    #descricao embed, #descricao object, #descricao img, #descricao table {
         max-width: 100%;
         width: 100%;
     }
