--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2644,6 +2644,7 @@
     #lightwindow_contents {
         overflow-x: hidden !important;
         overflow-y: auto !important;
+        max-height: 400px !important;
     }
     #enviar_cartao{
         background: url("https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/bt-pagar.png") repeat scroll 0% 0% transparent !important;
