--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2365,7 +2365,7 @@
     }
 
     .Pedidos > tbody:nth-child(1) > tr:nth-child(1) > th:nth-child(4) {
-
+        display: none;
     }
 
     .bt-cep {
