--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -127,6 +127,7 @@
         min-height: 100%;
         border: 0 !important;
         padding-top: 0;
+        overflow: initial !important;
         z-index: 999;
     }
 
