--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2675,7 +2675,8 @@
         padding: 3px;
         margin-right: 44px;
         overflow: hidden;
-        width: 200px;
+        width: 182px;
+        font-size: 10px;
     }
 
     #lightwindow_contents img {
