--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -2035,6 +2035,7 @@
         float: right;
         margin-right: -28px;
         margin-top: 14px;
+        white-space: nowrap;
     }
 
     .page-simula-frete table.tablePage td:nth-child(1) img{
